unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/FSL_SLA_ArrivalWindow__c.object-meta.xml
<CustomObject>
    <label>FSL SLA Arrival Window</label>
    <nameField>
        <label>FSL SLA Arrival Window Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL SLA Arrival Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>