unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/First_Retry_Policy__c.field-meta.xml
<CustomField>
    <fullName>First_Retry_Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This policy will be executed if Schedule Policy doesn&#39;t find a match</description>
    <label>First Retry Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>FSL SLA Arrival Windows (Second Scheduling Policy)</relationshipLabel>
    <relationshipName>FSL_SLA_Arrival_Windows_2</relationshipName>
    <type>Lookup</type>
</CustomField>