unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Work Order Priority</label>
    <length>225</length>
    <type>Text</type>
</CustomField>