unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/Retry_Policy__c.field-meta.xml
<CustomField>
    <fullName>Retry_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Retry Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>FSL SLA Arrival Windows</relationshipLabel>
    <relationshipName>FSL_SLA_Arrival_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>