unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>FSL SLA Arrival Windows (Scheduling Policy)</relationshipLabel>
    <relationshipName>FSL_SLA_Arrival_Windows1</relationshipName>
    <type>Lookup</type>
</CustomField>