unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>FSL SLA Arrival Windows</relationshipLabel>
    <relationshipName>FSL_SLA_Arrival_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>