unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/fields/Tow_SLA__c.field-meta.xml
<CustomField>
    <fullName>Tow_SLA__c</fullName>
    <label>Tow SLA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>