unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>