unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/By_State_SLA_Arrival_Windows.listView-meta.xml
<ListView>
    <fullName>By_State_SLA_Arrival_Windows</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Priority__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>startsWith</operation>
        <value>27</value>
    </filters>
    <label>By State SLA Arrival Windows</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>