unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/CA_SLA_Arrival_Windows.listView-meta.xml
<ListView>
    <fullName>CA_SLA_Arrival_Windows</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Priority__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>startsWith</operation>
        <value>16</value>
    </filters>
    <label>CA SLA Arrival Windows</label>
</ListView>