unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/DEFAULT.listView-meta.xml
<ListView>
    <fullName>DEFAULT</fullName>
    <columns>NAME</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>default</value>
    </filters>
    <label>DEFAULT</label>
</ListView>