unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/PA_SLA.listView-meta.xml
<ListView>
    <fullName>PA_SLA</fullName>
    <columns>Service_Territory__c</columns>
    <columns>NAME</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>LS_SLA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>startsWith</operation>
        <value>55</value>
    </filters>
    <label>PA_SLA</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>