unpackaged/main/default/objects/FSL_SLA_ArrivalWindow__c/listViews/Texas_SLA_s.listView-meta.xml
<ListView>
    <fullName>Texas_SLA_s</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>First_Retry_Policy__c</columns>
    <columns>Retry_Policy__c</columns>
    <columns>LS_SLA__c</columns>
    <columns>Tow_SLA__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>startsWith</operation>
        <value>63</value>
    </filters>
    <label>Texas SLA&#39;s</label>
</ListView>